--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "gulp-file-include": "^2.3.0",
     "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^6.2.0",
-    "gulp-rename": "^1.4.0",
-    "gulp-sass": "^5.0.0",
-    "node-sass": "^6.0.0"
+    "gulp-rename": "^1.4.0"
   },
   "browserslist": [
     "last 1 version",
@@ -30,7 +28,9 @@
   ],
   "dependencies": {
     "animate.css": "^4.1.1",
+    "gulp-sass": "^5.1.0",
     "html-import-partials": "^1.0.1",
+    "node-sass": "^9.0.0",
     "waypoints": "^4.0.1"
   }
 }
